--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -3,6 +3,7 @@
 // -----------------------------------------------------------------------------
 
 .title {
+  grid-area: title;
   border-bottom: $regular_border_line;
   padding: 0.5rem;
 }
