--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -14,11 +14,6 @@ body {
     "footer footer";
 }
 
-.title {
-  grid-area: title;
-  
-}
-
 // NAVIGATION //
 
 .menu {
@@ -54,7 +49,7 @@ body {
 
 .cta {
   grid-area: cta;
-  margin-right: -1px; // TODO à mettre dans container dans fichier base ?
+  margin-right: -1px;
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
@@ -67,6 +62,7 @@ body {
   border-right: $regular_border_line;
 }
 
+
 #copyright {
   font-size: $font_size_xs;
 }
@@ -77,6 +73,8 @@ body {
   border-top: 1rem solid $neutral_color_dark;
   margin-bottom: 1rem;
 }
+
+
 
 .highlight {
   display: flex;
